themes/inbeat/assets/scss/pages/_home.scss
#hero {
    padding-top: 8.50rem;
    padding-bottom: 6rem;
    text-align: center;
    @include breakpoint(sm) {
        padding-top: calc(50vh - 15.625rem);
        padding-bottom: calc(50vh - 18rem);
    }
    &.has-banner{
        // Add the banner height size
        transform: translateY(36.5px);
    }
    h4 {
        width: 100%;
        margin-bottom: 4rem;
        @include breakpoint(sm) {
            margin: auto;
            margin-bottom: 5rem;
        }
    }
    .cta {
        a {
            display: block;
            margin: 0 auto 20px;
            width: 100%;
            @include breakpoint(31.25rem) {
                width: 16.75rem;
            }
            @include breakpoint(sm) {
                display: inline-block;
                margin: 0;
                &:first-child {
                    margin-right: 20px;
                }
            }
            &#hero-cta {
                @include breakpoint(sm-down) {
                    color: black;
                    border: none;
                    animation: crazy 2s infinite;
                }
            }
            span {
                font-weight: bold;
            }
        }
        a:nth-child(2){
            padding-left: 20px;
            span{
               padding-left: 20px;
                padding-right: 20px;
            }
        }
    }
}

#clients {
    .row {
        margin: 0;
    }
    @include breakpoint(md-down) {
        max-width: 34rem;
    }
    .icons {
        @include breakpoint(md-down) {
            flex-basis:33.33333%;
            &:nth-child(3n + 2) {
                text-align: center;
            }
            &:nth-child(3n) {
                text-align: right;
            }
            svg {
                margin-bottom: 1rem;
            }
        }
        @include breakpoint(sm-down) {
            svg {
                max-width: 70%;
                max-height: 2.5rem;
            }
        }
    }
    svg {
        fill: $dark;
    }
}

.home-features {
    padding: 30px 25px;
    box-sizing: border-box;
    outline: none !important;
    @include breakpoint(xs) {
        padding: 50px 35px;
    }
    @include breakpoint(sm) {
        padding: 58px 51px;
    }
    @include breakpoint(sm-down) {
        margin: 0 !important;
    }
    &#search {
        background-color: $yellow_sub;
    }
    &#pick {
        background-color: $red_sub;
    }
    &#export {
        background-color: $green_sub;
    }
    .left-col {
        position: relative;
    }
    p {
        @include breakpoint(md) {
            margin-bottom: 4rem;
        }
        span {
            font-weight: bold;
        }
    }
    a.learn-more {
        font-weight: bold;
        display: block;
        padding-bottom: 1.5rem;
        border-bottom: 1px solid $dark;
        margin-bottom: 2.5rem;
        @include breakpoint(md) {
            margin-bottom: 4rem;
        }
    }
    a.question {
        font-size: 0.875rem;
        line-height: 1.25rem;
        color: $dark_sub;
        text-decoration: underline;
        @include breakpoint(md) {
            position: absolute;
            bottom: 0;
            left: 0.5rem;
        }
    }
    .icon-ctn {
        position: relative;
        width: 100%;
        height: auto;
        margin-bottom: 1rem;
        @include breakpoint(md) {
            margin-bottom: 0;
        }
        video {
            width: 100%    !important;
            height: auto   !important;
        }
    }
}



#extras {
    .icon-ctn {
        position: relative;
        width: 4.6875rem;
        height: 4.6875rem;
    }
    h3 {
        margin-top: 20px;
    }
}

#what-we-do {
    background: $light_grey;
    padding: 50px auto;
    @include breakpoint(xs) {
        padding: 50px 35px;
    }
    @include breakpoint(sm) {
        padding: 58px 51px;
    }
    @include breakpoint(sm-down) {
        margin: 0 !important;
    }
    video {
        width: 100%;
        margin: 25px 0;
        border-radius: 10px;
        @include breakpoint(md) {
            width: 85%;
        }
    }
    .row{
        display: flex;
        align-items: center;
        @include breakpoint(md-down) {
            flex-direction: column-reverse;
        }
        p{
            opacity: 0.75;
        }
        .cta{
            a{
                border: none;
            }
            margin: 50px 0;
        }
    }
}

// cta-affiliate is from affiliate page, but same styling
#start-now, #cta-affiliate {
    .col1 {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
    h4 {
        margin-bottom: 3rem;
        @include breakpoint(md) {
            margin-bottom: 3.5rem;
        }
    }
    p.signin {
        margin-top: 2.5rem;
        font-size: 0.6875rem;
        a {
            font-size: inherit;
            text-decoration: underline;
        }
    }
    .icon-ctn {
        background: $yellow_sub;
        width: 100%;
        height: 100%;
    }
    .btn span {
        font-weight: bold;
    }
}

#cta-home{
    border-top: 1px solid black;
    &.no-border{
        border-top:none !important;
    }
    .cta-button{
        margin-top: 3.75rem;
    }
}
#freetoolkit-sec {
    padding: 3rem 1.25rem;
    @include breakpoint(md) {
        padding-top: 7.93rem;
        padding-bottom: 8rem;
    }
    .toolkit-title{
        @include breakpoint(sm-down) {
            display: flex;
            align-items: center;
            justify-content: space-between;
            width: 100%;
           }
        h3{
        font-weight: 500;
        font-size: 42px;
        line-height: 52px;
        letter-spacing: -0.4px; 
        @include breakpoint(sm-down) {
            font-size: 30px;
            line-height:36px;
           }
        }
        svg{
            display: block;
            @include breakpoint(md) {
                display: none;
               }
        }
    }
	.toolkits {
        .row{
         @include breakpoint(sm-down) {
             overflow-x: auto;
            display: grid;
            grid-template-columns: repeat(3, 1fr);
            grid-auto-rows: 1fr;
            }
        }
		.toolkit {
            display: table;

            width: 100%;
            margin-top: 25px;
            &:hover .inner{
                border: 1px solid rgba(0, 0, 0, 1);
                cursor: pointer;
            }
			.inner {
                transition: all .05s cubic-bezier(0.55, 0.085, 0.68, 0.53);
                display: flex;
				border: 1px solid rgba(0, 0, 0, 0.20);
				padding: 15px;
                flex-direction: row-reverse;
                @include breakpoint(sm-down) {
                    padding: 33px 16px 47px 27px;
                    height: auto;
                    width: 60vw;
                    min-height: 120px;
                }
                .content{
                    padding: 50px 25px 25px 25px;
                    @include breakpoint(sm-down) {
                        padding: 0px;
                    }
                    p{
                        display: inline-block;
                        align-self: flex-end;
                        font-size: 0.875rem;
                        margin-bottom: 0;
                        @include breakpoint(sm-down) {
                               font-size: .875rem;
                               margin-top:5px;
                               line-height: 1.5rem;
                        }
                    }
                    h4{
                        line-height: 31px;
                        margin: 0;
                        font-size: 1.5rem;
                        font-weight: 500;
                        @include breakpoint(sm-down) {
                               font-size: 1rem;
                        }
                    }
                }
			}
		}
	}
}

